Improved DtoGenerator. Things are updated. Fixed tests after updating the Dto. Added a new Dateconverter class. Fixed the password generation method.